@@ -1,10 +1,12 @@
 package com.chess.api.model.piece;
 
+import com.chess.api.model.Action;
 import com.chess.api.model.Board;
 import com.chess.api.model.Colour;
 import com.chess.api.model.Vector2D;
 import com.chess.api.model.movement.Movement;
 import com.chess.api.model.movement.Path;
+import java.util.Arrays;
 import java.util.List;
 import lombok.AccessLevel;
 import lombok.Getter;
@@ -34,12 +36,16 @@ public class Piece {
         this.type = pieceType;
         this.colour = colour;
         this.position = vector;
-        this.movements = List.of(movements);
+        this.movements = Arrays.asList(movements);
         this.hasMoved = false;
         this.lastMoveDistance = 0;
     }
 
     public void setPosition(@NonNull Vector2D destination) {
+        if (destination.equals(this.position)) {
+            return;
+        }
+
         this.lastMoveDistance = Math.max(Math.abs(destination.getX() - position.getX()),
                 Math.abs(destination.getY() - position.getY()));
         this.position = destination;
@@ -53,7 +59,8 @@ public class Piece {
     public Movement getMovement(@NonNull Board board, @NonNull Vector2D destination) {
         for (Movement move : this.movements) {
             Path path = move.getPath(this.colour, this.position, destination);
-            if (path != null && path.isTraversable(board) && move.passesConditions(board, this.position, destination)) {
+            if (path != null && path.isTraversable(board)
+                    && move.passesConditions(board, new Action(this.colour, this.position, destination))) {
                 return move;
             }
         }
